--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ data/DS_cells.pkl
 data/decoding_analysis/Stretch_BioQuads_multiplied_w_mean_g__theta_step=2_original_g_20240509_AREA.pkl
 data/contrast_cells/*
 data/computed_contrast_cells/*
+data/fitted_tunings/*
 
 # figures
 figures/all/*
